feat: refactoring en SCSS

--- a/packages/frontend/src/assets/styles/_components.scss
+++ b/packages/frontend/src/assets/styles/_components.scss
@@ -1,1 +1,6 @@
 @import "./components/the-header";
+@import "./components/the-search-bar";
+@import "./components/the-filters";
+@import "./components/cards-list";
+@import "./components/the-footer";
+
